[package]
name = "blasted"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Boy Maas <boy.maas@gmail.com>"]
description = "Composable editor in rust, crates as plugins"
homepage = "https://github.com/blasted-rs"
repository = "https://github.com/blasted-rs/bed"

# warning: manifest has no description, license, license-file, documentation, homepage or repository.
# See https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata for more info.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
crossterm = { version = "0.25.0", features = ["event-stream"] }
futures = "0.3.25"
ropey = "1.5.0"
slotmap = "1.0.6"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tui = "0.19.0"
